# FAIRRS-Evaluation

./: .gitignore  LICENSE  README.md  pyproject.toml
codemeta/: 3cf66524-0a09-4738-9714-1fb518db1499_jsonld.json  602c9bbc-b45a-423a-9d1b-0c41e476d1e3_jsonld.json  68a26f8a-08f5-473a-afe9-91740c037633_jsonld.json
crosswalks/: codemeta_csdms.md  codemeta_fairmetrics.md  codemeta_hydroshare.md
documentation/: readme.md
evaluators/fair4rs/: environment.yml  evaluator_inspection.ipynb  evaluators.py  main.py  results_summary.ipynb  visualize_scores.ipynb  weights.py
evaluators/fair4rs_comses/: README.md  constants.py  environment.yml  evaluators.py  main.py  scoring.py  (+3 more)
fair4rs_scorecard/: README.md
fair_principles_descriptions/: fair_principles_software.md  fair_principles_workflows.md
fairsoft/: .gitignore  evaluation_client.py  extractor_client.py  fairsoft_evaluation.ipynb  fairsoft_evaluation_adapted.ipynb  fairsoft_evaluation_adapted_csdms.ipynb  fairsoft_evaluation_csdms.ipynb  get_repository_metadata.py  jsonld_client.py  metadata_client.py  preprocess_utils.py
out_hydroshare/: 0a7735b121f845f7ab0d1ac6348d9980-SWAT 2012 Rev 664 - modified to accept long management files.json  1710a6b553da4f70877c2abc69f3a42b-MP.json  22e72bca6f754ac0a2ccc831ced21f22-SWAT670forWMOST.json  8c499dadaa274af488775596212ebf73-SUMMA 3.0.0.json  9fa39b142f6c4505bc64888b724d29a1-model-program.json  e992c4484f864ef8bccdc2924ed6e9ba-Executable file.json  e992c4484f864ef8bccdc2924ed6e9ba-SWAT Model Executable.json
schemas/: codemeta_properties.md
scripts/: collect_csdms_urls.py
(+4231 files in other folders)
