[tool.poetry]
name = "how-fair-is-it-v1"
version = "0.1.0"
description = ""
authors = ["Mari <74034683+mariamartz@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
